<resources>
    <string name="app_name">Splash Screen</string>
    <string name="pitbull_s_rent">Chat Chat</string>
    <string name="breed_wise_dog_s_product">Chat With Friends</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="greeting_text">Hello there, Welcome back</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="pitbull_dog_logo">PitBull Dog Logo</string>
    <string name="forget_password">Forget Password?</string>
    <string name="go">Go</string>
    <string name="new_user_sign_up">New User? Sign Up</string>
    <string name="logo_image">Logo Image</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up_to_start_your_new_journey">Sign Up to start your new chat</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="already_have_an_account_login">Already Have an account? login</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_message">Enter Your Message</string>
    <string name="group_chat">Group Chat</string>
</resources>