<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUp"
    android:background="#fff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/progressBar"
                style="@style/SpinKitView.Large.Wave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_gravity="center"
                app:SpinKit_Color="#42DDB1" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:transitionName="logo_image"
                android:contentDescription="@string/logo_image"
                android:src="@drawable/logo"/>

            <TextView
                android:layout_marginTop="-25dp"
                android:id="@+id/logoTextView"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:transitionName="logo_text"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:fontFamily="@font/bungee"
                android:textSize="40sp"/>

            <TextView
                android:id="@+id/signUpTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-25dp"
                android:transitionName="sign_up_in"
                android:text="@string/sign_up_to_start_your_new_journey"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameEditTextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textAutoCorrect|textAutoComplete|textCapWords"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameEditTextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Username"
                    app:counterMaxLength="15"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:transitionName="username"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailEditTextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneEditTextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_no"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordEditTextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:endIconMode="password_toggle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:transitionName="password"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/goButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/go"
                android:layout_marginTop="5dp"
                android:transitionName="go_button"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#000" />

            <Button
                android:id="@+id/haveAccountButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:transitionName="account"
                android:background="#00000000"
                android:text="@string/already_have_an_account_login"
                android:capitalize="characters"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:elevation="0dp"
                tools:ignore="Deprecated,TextViewEdits" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>